Update media queue and playlists routes for consistency

--- a/src/app/components/media-player/media-player.component.scss
+++ b/src/app/components/media-player/media-player.component.scss
@@ -613,8 +613,8 @@ app-stream-info-bar {
   }
 
   /* Hide Queue button in fullscreen mode - users should exit fullscreen first */
-  button[routerlink="/media-queue"],
-  button[routerLink="/media-queue"] {
+  button[routerlink="/queue"],
+  button[routerLink="/queue"] {
     display: none !important;
   }
 
