--- a/src/app/components/media-player/video-player/video-player.component.html
+++ b/src/app/components/media-player/video-player/video-player.component.html
@@ -51,7 +51,7 @@
         <mat-icon>skip_next</mat-icon>
       </button>
 
-      <button matTooltip="View queue" routerLink="/media-queue" mat-icon-button>
+      <button matTooltip="View queue" routerLink="/queue" mat-icon-button>
         <mat-icon>queue_music</mat-icon>
       </button>
 
