--- a/src/app/components/media-player/audio-player/audio-player.component.html
+++ b/src/app/components/media-player/audio-player/audio-player.component.html
@@ -93,7 +93,7 @@
               <span>Forward 10s</span>
             </button>
             }
-            <button mat-menu-item routerLink="/media-queue">
+            <button mat-menu-item routerLink="/queue">
               <mat-icon>queue_music</mat-icon>
               <span>Queue</span>
             </button>
@@ -150,7 +150,7 @@
           <span>Speed: {{ media.playbackRate() }}x</span>
         </button>
         }
-        <button mat-menu-item routerLink="/media-queue">
+        <button mat-menu-item routerLink="/queue">
           <mat-icon>queue_music</mat-icon>
           <span>Queue</span>
         </button>
