fix(database): preserve original event IDs when storing and retrieving badge events

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -399,7 +399,7 @@
       </div>
     </mat-sidenav>
 
-    <mat-sidenav-content [class.following-sidebar-docked]="favoritesOverlay?.isDocked()"
+    <mat-sidenav-content [class.following-sidebar-docked]="favoritesOverlay?.isDocked() ?? false"
       [class.media-player-shown]="layout.showMediaPlayer()">
       <!-- Page content -->
       <div class="content-wrapper">
