refactor(people): comment out large view mode option in menu

--- a/src/app/pages/people/people.component.html
+++ b/src/app/pages/people/people.component.html
@@ -25,10 +25,10 @@
       </button>
 
       <mat-menu #viewMenu="matMenu">
-        <button mat-menu-item (click)="changeViewMode('large')">
+        <!-- <button mat-menu-item (click)="changeViewMode('large')">
           <mat-icon>calendar_view_month</mat-icon>
           <span>Large icons</span>
-        </button>
+        </button> -->
         <button mat-menu-item (click)="changeViewMode('medium')">
           <mat-icon>view_module</mat-icon>
           <span>Medium icons</span>
